# rust-pokedex

./: .env  Cargo.toml  Dockerfile  Pokedex.postman_collection.json  docker-compose.yml  pokedex.json  readme.md
migrations/2022-04-17-082620_create_pokemons/: up.sql
src/: api_result.rs  config.rs  db_connection.rs  errors.rs  lib.rs  main.rs  schema.rs
src/db/: pokemon.rs
src/models/: pokemon.rs
src/routes/: pokemons.rs
