[package]
name = "pokedex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_contrib = "0.4.10"
diesel = { version = "1.4.4", features = ["postgres", "serde_json"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
validator = "0.14.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
lazy_static = "1.4.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]